syntax = "proto3";

package berty.node;

import "berty.tech/network/metric/metric.proto";
import "gogoproto/gogo.proto";

option go_package = "berty.tech/core/api/node";

enum Kind {
  // Unknown events should never happen
  Unknown = 0;

  NodeStarted = 1;
  NodeStopped = 2;
  NodeIsAlive = 3;
  BackgroundCritical = 4;
  BackgroundError = 5;
  BackgroundWarn = 6;
  BackgroundInfo = 7;
  Debug = 8;
  Statistics = 9;
  // FIXME: add connection established
}

message NodeStartedAttrs { bool T = 1; }
message NodeStoppedAttrs { string err_msg = 1; }
message NodeIsAliveAttrs { bool T = 1; }
message BackgroundCriticalAttrs { string err_msg = 1; }
message BackgroundErrorAttrs { string err_msg = 1; }
message BackgroundWarnAttrs { string err_msg = 1; }
message DebugAttrs { string msg = 1; }

message StatisticsAttrs {
  string err_msg = 1;
  berty.network.metric.BandwidthStats total_network_bandwidth = 2;
  int32 peers_count = 3;
  // FIXME: other interesting info (CPU?)
}
